# ruleprocessorY

./: .gitignore  20k_popular.txt  CMakeLists.txt  Dockerfile  README.md  build.ninja  example_rules.json  json.hpp  main.cpp  rule.cpp  rule.h  test_pw.txt  test_rules.txt  top_5000.json
.github/workflows/: codeql-analysis.yml
